# sensors-consumer

./: .clang-format  CMakeLists.txt  main.py
src/: main.cpp  mystring.h  point.h  threadsafequeue.h
